Implementa cadastro de pilar
